Issue #1516: increase test coverage to 80% (#1518)
* Issue #1516: increase test coverage to 80%

* Issue #1516: increase test coverage to 80%

---------

Co-authored-by: Thierry Boileau <thboileau@gmail.com>