@@ -81,7 +81,7 @@ class SeriesTestCase {
         @SuppressWarnings("unchecked")
         List<Object> list = (List<Object>) value;
         assertEquals(2, list.size());
-        assertEquals("text/html", list.get(0));
+        assertEquals("text/html", list.getFirst());
         assertEquals("application/json", list.get(1));
     }
 
@@ -96,7 +96,7 @@ class SeriesTestCase {
         @SuppressWarnings("unchecked")
         List<Object> list = (List<Object>) params.get("x");
         assertEquals(3, list.size());
-        assertEquals("1", list.get(0));
+        assertEquals("1", list.getFirst());
         assertEquals("2", list.get(1));
         assertEquals("3", list.get(2));
     }
@@ -114,7 +114,7 @@ class SeriesTestCase {
         @SuppressWarnings("unchecked")
         List<Object> list = (List<Object>) params.get("h");
         assertEquals(2, list.size());
-        assertSame(Series.EMPTY_VALUE, list.get(0));
+        assertSame(Series.EMPTY_VALUE, list.getFirst());
         assertSame(Series.EMPTY_VALUE, list.get(1));
     }
 
@@ -132,7 +132,7 @@ class SeriesTestCase {
         @SuppressWarnings("unchecked")
         List<Object> list = (List<Object>) params.get("h");
         assertEquals(3, list.size());
-        assertEquals("value1", list.get(0));
+        assertEquals("value1", list.getFirst());
         assertSame(Series.EMPTY_VALUE, list.get(1));
         assertEquals("value2", list.get(2));
     }
